deploy/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: riffraff-server-http-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`riffraff.vdhsn.com`, `riffraff.veldhousen.com`)
      kind: Rule
      services:
        - name: riffraff
          port: 80
      middlewares:
        - name: ssl-redirect-header
        - name: gzip
  tls:
    certResolver: default
